crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__required_import_unused.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
F401 [*] `sys` imported but unused
 --> unused.py:5:8
  |
4 | # Unused, _not_ marked as required.
5 | import sys
  |        ^^^
6 |
7 | # Unused, _not_ marked as required (due to the alias).
  |
help: Remove unused import: `sys`
  |
5 - import sys
  |

F401 [*] `pathlib` imported but unused
  --> unused.py:8:19
   |
 7 | # Unused, _not_ marked as required (due to the alias).
 8 | import pathlib as non_alias
   |                   ^^^^^^^^^
 9 |
10 | # Unused, marked as required.
   |
help: Remove unused import: `pathlib`
  |
8 - import pathlib as non_alias
  |
