crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__required_import_with_alias_comments_and_newlines.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I002 [*] Missing required import: `from __future__ import annotations as _annotations`
--> comments_and_newlines.py:1:1
help: Insert required import: `from __future__ import annotations as _annotations`
  |
3 |
4 | # A linter directive could go here
5 |
6 + from __future__ import annotations as _annotations
7 | x = 1
  |
