crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__required_import_with_alias_docstring_with_semicolon.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I002 [*] Missing required import: `from __future__ import annotations as _annotations`
--> docstring_with_semicolon.py:1:1
help: Insert required import: `from __future__ import annotations as _annotations`
  |
1 | """Hello, world!"""; from __future__ import annotations as _annotations; x = 1
  |                      +++++++++++++++++++++++++++++++++++++++++++++++++++
